Added css/html elements
Was missing the styling from Week 4 - added 'Quantity:' to home.html for each item as well as edited the share icon

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,24 @@
 page-home {
     h3.no-item {
-        color:map-get($colors, 'babyblue');
+        color:map-get($colors, 'primary');
     }
+
+    h2.item-name {
+        font-weight:500;
+    }
+
+    p.item-qty  {
+        font-style:italic;
+        padding-top:6px;
+
+    }
+
+    title {
+        text-align:center;
+    }
+
+  
+
+
 
 }
